<resources>
    <string name="app_name">娱儿TV</string>

    <!-- app bar-->
    <string name="bar_main">首页</string>
    <string name="bar_category">分类</string>
    <string name="bar_attention">关注</string>
    <string name="bar_mine">我的</string>

    <!--下拉刷新-->
    <string name="pr_pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pr_pull_up_to_refresh_pull_label">上拉加载更多</string>
    <string name="pull_up_to_refresh_release_label">松开加载</string>
    <string name="pull_up_to_refresh_refreshing_label">加载中&#8230;</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pr_pull_to_refresh_release_label">松开后刷新</string>
    <string name="pr_pull_to_refresh_refreshing_label">刷新中&#8230;</string>
    <string name="pull_up_to_refresh_pull_label">上拉加载更多</string>
    <string name="pull_up_last_refresh">上次加载：</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pr_pull_to_refresh_pull_label</string>
    <string name="pr_pull_to_refresh_from_bottom_release_label">松开即可加载</string>
    <string name="pr_pull_to_refresh_from_bottom_refreshing_label">加载中&#8230;</string>
    <string name="pr_pull_to_refresh_refresh_lable">正在加载中</string>
    <string name="noNeteork">网络异常!</string>

    <!--首页-->
    <string name="hot_liveplay">热门直播</string>
    <string name="hot_video">精彩视频</string>
    <string name="more">更多</string>
    <string name="live_video_new">最新视频</string>
    <string name="live_video_hot">最热视频</string>
    <string name="whole_video">全部视屏</string>

    <!-- 直播间-->
    <string name="live_play_information_tab">信息</string>
    <string name="live_play_ralk_tab">留言(100)</string>
    <string name="live_play_history_tab">往期</string>
    <string name="live_play_fans_num">粉丝 %1$s</string>
    <string name="live_online_num">在线 %1$s</string>
    <string name="live_room_attention">关注</string>
    <string name="live_room_attentioned">已关注</string>
    <string name="unknownException">未知异常</string>


    <!--登陆-->
    <string name="please_imput_phone">请输入手机号</string>
    <string name="please_imput_code">请输入验证码</string>
    <string name="please_imput_password">请输入密码</string>
    <string name="phone_format_is_not_correct">手机号码格式不正确</string>
    <string name="send_code">获取验证码</string>
    <string name="forget_password">忘记密码</string>
    <string name="please_use_password_to_login">使用密码登陆</string>
    <string name="please_use_code_to_login">使用验证码登录</string>
    <string name="login">登录</string>
    <string name="register_users">注册新用户</string>
    <string name="login_fail">登陆失败</string>
    <string name="to_obtain">重新获取</string>
    <string name="please_do_not_frequent_click">请不要频繁点击</string>
    <string name="please_imput_setvice_code">请输入图片验证码</string>
    <string name="code_is_sended">验证码已发送</string>
    <string name="Do_not_tip">不在提示</string>
    <string name="use_wangyudashi">( 可使用网娱大师账号 )</string>
    <string name="weixin_login">微信登录</string>
    <string name="qq_login">QQ登录</string>
    <string name="weibo_login">微博登录</string>
    <string name="qq_login_success">qq登陆成功</string>
    <string name="qq_login_error">qq登陆失败</string>
    <string name="qq_login_cancel">qq登陆被取消</string>
    <string name="wechat_login_success">微信登陆成功</string>
    <string name="wechat_login_error">微信登陆失败</string>
    <string name="wechat_login_cancel">微信登陆被取消</string>
    <string name="weibo_login_success">微博登陆成功</string>
    <string name="weibo_login_error">微博登陆失败</string>
    <string name="weibo_login_cancel">微博登陆被取消</string>

    <string name="errcode_success">微信分享成功</string>
    <string name="errcode_cancel">微信分享取消</string>
    <string name="errcode_deny">微信分享被拒绝</string>
    <string name="errcode_unknown">微信分享返回</string>
    <string name="errcode_failed">微信分享失败</string>

    <!--注册-->
    <string name="get_code">获取短信验证码</string>
    <string name="next">下一步</string>
    <string name="finish">完成</string>
    <string name="have_a_account">已有账号，马上登录</string>
    <string name="complete">完成</string>
    <string name="register_user">注册新用户</string>
    <string name="back_login">返回登录</string>
    <string name="changge_phone">更换手机</string>
    <string name="retrieve_password">找回密码</string>
    <string name="please_imput_number_engish_password">请输入6-15位英文或数字组合</string>
    <string name="please_enter_password_at_least">请输入至少6位数的密码</string>
    <string name="please_login_again">请重新登录</string>
    <string name="code_has_bean_sended">短信验证码已发至</string>
    <string name="please_look_at">，请注意查收</string>
    <string name="has_ragister">该手机号已经注册</string>
    <string name="login_in_immediately">马上登录</string>
    <string name="use_other_phone">使用其它手机号码</string>
    <string name="register_agree_agreement">注册即视为同意</string>
    <string name="yuer_tv_xieyi">《娱儿TV用户服务协议》</string>


    <string name="search_hint">可搜索房间号、主播昵称、游戏名称</string>
    <!--评论-->
    <string name="hot_comment">热门评论</string>
    <string name="newest_comment">最新评论</string>

    <string name="wan">万</string>
    <string name="yi">亿</string>
    <string name="back">返回</string>
    <string name="submit">提交</string>
    <string name="share_the_mood">来跟大家分享一下此时此刻的心情吧</string>
    <string name="character">字</string>
    <string name="also_you_can_enter">还可以输入</string>
    <string name="banned_to_post">您已被禁言，请稍候提交</string>
    <string name="please_upload_img">请先上传图片</string>
    <string name="submit_success">提交成功</string>
    <string name="submit_fail">提交失败</string>
    <string name="up_phone">正在上传照片</string>
    <string name="uploadfail">上传失败</string>
    <string name="uploadfsuccess">上传成功</string>

    <string name="anchor_leave">主播当前不在线,看看其别的吧</string>
    <string name="no_wifi_hint">现在没有wifi,再看要花流量费哦</string>
    <string name="no_wifi_continue">土豪请继续</string>

    <string name="weibo_share_success">微博分享成功</string>
    <string name="weibo_share_cancel">微博分享取消</string>
    <string name="weibo_share_fail">微博分享失败</string>

    <string name="live_share">正在直播，快来体验</string>
    <string name="live_comment_hint">已有%1$s条评论 ，快来评论吧。。。。</string>
    <string name="live_tab_num">留言(%1$s)</string>

</resources>
