<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="49dp"
    android:gravity="center_vertical"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/ll_main_bar"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_main_bar_match"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/icon_bar_main_selected"
            android:gravity="center"
            android:text="@string/bar_main"

            android:textColor="@color/bar_text_selected"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tv_main_bar_information"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/icon_bar_category_unselected"
            android:gravity="center"
            android:text="@string/bar_category"
            android:textColor="@color/textColorGray"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tv_main_bar_find"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/icon_bar_attention_unselected"
            android:gravity="center"
            android:text="@string/bar_attention"
            android:textColor="@color/textColorGray"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tv_main_bar_mine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/icon_bar_category_unselected"
            android:gravity="center"
            android:text="@string/bar_mine"

            android:textColor="@color/textColorGray"
            android:textSize="11sp" />

    </LinearLayout>
</LinearLayout>