<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:background="@drawable/bg_rectangle_corner_hollow_03"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/dialog_register_off_iv"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bomb_box_delete" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/has_ragister"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_15" />


    <Button
        android:id="@+id/dialogBtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        android:text="@string/login_in_immediately"
        android:background="@drawable/login_button"/>
    
    <TextView
        android:id="@+id/dialogTvOtherPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_14"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:textColor="@color/attention_item_count"
        android:text="@string/use_other_phone"/>


</LinearLayout>
