<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/registerRlCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingLeft="35dp"
        android:paddingRight="35dp">

        <ImageView
            android:id="@+id/registerTvIsShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:src="@drawable/password_invisible" />

        <EditText
            android:id="@+id/registerEtPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toLeftOf="@id/registerTvIsShowPassword"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/please_imput_number_engish_password"
            android:inputType="textPassword"
            android:maxLength="15"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/category_item_count"
            android:textSize="@dimen/text_size_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/registerEtPassword"
            android:layout_marginTop="10dp"
            android:background="@color/line_one" />
    </RelativeLayout>

    <Button
        android:id="@+id/registerBtFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:background="@drawable/register_button"
        android:gravity="center"
        android:text="@string/finish"
        android:textColor="@color/text_gray_one"
        android:textSize="@dimen/text_size_14" />

    <LinearLayout
        android:id="@+id/registerLlAgreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_agree_agreement"
            android:textColor="@color/category_item_count"
            android:textSize="@dimen/text_size_10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yuer_tv_xieyi"
            android:textColor="@color/attention_item_count"
            android:textSize="@dimen/text_size_10" />
    </LinearLayout>
</LinearLayout>