<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingRight="12dp">

                <LinearLayout
                    android:id="@+id/back"
                    android:layout_width="45dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/back_white" />
                </LinearLayout>

                <TextView
                    android:id="@+id/rightTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_gravity="right|center_vertical"
                    android:gravity="center"
                    android:text="@string/register_users"
                    android:textColor="@color/attention_item_count"
                    android:textSize="@dimen/text_size_14" />
            </FrameLayout>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:scaleType="centerCrop"
                android:src="@drawable/logo" />

            <RelativeLayout
                android:id="@+id/loginRlPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:paddingLeft="35dp"
                android:paddingRight="35dp">

                <EditText
                    android:id="@+id/loginEtPhone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="35dp"
                    android:background="@null"
                    android:hint="@string/please_imput_phone"
                    android:inputType="phone"
                    android:maxLength="13"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text_gray_one"
                    android:textSize="@dimen/text_size_14" />

                <ImageView
                    android:id="@+id/loginIvClearPhone"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:padding="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/delete"
                    android:visibility="gone" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@id/loginEtPhone"
                    android:layout_marginTop="10dp"
                    android:background="@color/line_one" />
            </RelativeLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:paddingLeft="50dp"
                android:paddingRight="40dp"
                android:text="@string/use_wangyudashi"
                android:textColor="@color/category_item_count"
                android:textSize="@dimen/text_size_10" />

            <RelativeLayout
                android:id="@+id/loginRlPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/loginTvPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:text="@string/forget_password"
                    android:textColor="@color/attention_item_count"
                    android:textSize="@dimen/text_size_14" />

                <EditText
                    android:id="@+id/loginEtPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_toLeftOf="@id/loginTvPassword"
                    android:background="@null"
                    android:ellipsize="end"
                    android:hint="@string/please_imput_password"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:minLines="6"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text_gray_one"
                    android:textSize="@dimen/text_size_14" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@id/loginEtPassword"
                    android:layout_marginTop="10dp"
                    android:background="@color/line_one" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/loginRlCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:paddingLeft="35dp"
                android:paddingRight="35dp">

                <TextView
                    android:id="@+id/loginTvSendCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:text="@string/send_code"
                    android:textColor="@color/category_item_count"
                    android:textSize="@dimen/text_size_14" />

                <EditText
                    android:id="@+id/loginEtCode"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_toLeftOf="@id/loginTvSendCode"
                    android:background="@null"
                    android:ellipsize="end"
                    android:hint="@string/please_imput_code"
                    android:inputType="number"
                    android:maxLength="6"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/category_item_count"
                    android:textSize="@dimen/text_size_14" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@id/loginEtCode"
                    android:layout_marginTop="10dp"
                    android:background="@color/line_one" />
            </RelativeLayout>

            <TextView
                android:id="@+id/loginTvSwitching"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawableLeft="@drawable/login_switch_down"
                android:drawablePadding="9dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/please_use_password_to_login"
                android:textColor="@color/text_gray_one"
                android:textSize="@dimen/text_size_12" />

            <Button
                android:id="@+id/loginBtLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:background="@drawable/register_button"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/text_gray_one"
                android:textSize="@dimen/text_size_14" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:visibility="gone"
                android:paddingLeft="70dp"
                android:paddingRight="70dp">

                <LinearLayout
                    android:id="@+id/loginLlWeixin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/wechat_button" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/weixin_login"
                        android:textColor="@color/text_gray_one"
                        android:textSize="@dimen/text_size_10" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/loginLlQQ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/qq_button" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/qq_login"
                        android:textColor="@color/text_gray_one"
                        android:textSize="@dimen/text_size_10" />
                </LinearLayout>

                <com.miqtech.wymaster.wylive.widget.WeiboLoginLinearLayout
                    android:id="@+id/loginLlWeibo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/micro_blog_button" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/weibo_login"
                        android:textColor="@color/text_gray_one"
                        android:textSize="@dimen/text_size_10" />
                </com.miqtech.wymaster.wylive.widget.WeiboLoginLinearLayout>
            </FrameLayout>


        </LinearLayout>
    </RelativeLayout>
</ScrollView>